[package]
name = "sp-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-secp256k1 = "0.4.0"
ark-std = "0.4.0"
frontend = { path = "../shockwave-plus/frontend" }
#shockwave-plus = { git = "https://github.com/personaelabs/shockwave-plus" }
shockwave-plus = { path = "../shockwave-plus/shockwave_plus" }
keccak = { path = "../my-keccak" }
num-bigint = "0.4.4"
hex = "0.4.3"
